# bert_inference_cpp

./: CMakeLists.txt  main.cpp
data_common/: bert_tokenizer.cpp  bert_tokenizer.h  data_value.h  sequence_builder.cpp  sequence_builer.h
datas/: vocab.txt
inference/: CMakeLists.txt  bert_classification.cpp  bert_classification.h
service/: CMakeLists.txt  bert_service.cpp  bert_service.h
test/: fast_split_test  fast_split_test.cpp  lazydog  lazydog.cpp  string_function_test  string_function_test.cpp  string_test  string_test.cpp  tokenizer_test  tokenizer_test.cpp  vector_test  vector_test.cpp
tokenizer/: CMakeLists.txt  bert_tokenizer.cpp  bert_tokenizer.h  bert_tokenizer_test.cpp
